deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-scheduler
  namespace: kube-public
spec:
  selector:
    app: dynamic-scheduler
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
