deployment/admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "dynamic-scheduler.kube-public.svc-valid"
webhooks:
- name: "dynamic-scheduler.kube-public.svc-valid"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE","UPDATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "kube-public"
      name: "dynamic-scheduler"
      port: 8443
      path: /admission
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJakNDQWdvQ0NRQ1JzV0x0bkg0eEREQU5CZ2txaGtpRzl3MEJBUXNGQURCVE1Rc3dDUVlEVlFRR0V3SkQKVGpFTE1Ba0dBMVVFQ0F3Q1IwUXhDekFKQmdOVkJBY01BbE5hTVJNd0VRWURWUVFLREFwQlkyMWxMQ0JKYm1NdQpNUlV3RXdZRFZRUUREQXhCWTIxbElGSnZiM1FnUTBFd0hoY05NakV3T0RFMU1UVXdOalUyV2hjTk1qSXdPREUxCk1UVXdOalUyV2pCVE1Rc3dDUVlEVlFRR0V3SkRUakVMTUFrR0ExVUVDQXdDUjBReEN6QUpCZ05WQkFjTUFsTmEKTVJNd0VRWURWUVFLREFwQlkyMWxMQ0JKYm1NdU1SVXdFd1lEVlFRRERBeEJZMjFsSUZKdmIzUWdRMEV3Z2dFaQpNQTBHQ1NxR1NJY [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 15
  failurePolicy: Ignore
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "dynamic-scheduler.kube-public.svc-mutating"
webhooks:
- name: "dynamic-scheduler.kube-public.svc-mutating"
  namespaceSelector:
    matchExpressions:
    - key: schedule
      operator: In
      values: ["true","activated"]
  rules:
  - apiGroups:   ["apps"]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["deployments"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "kube-public"
      name: "dynamic-scheduler"
      port: 8443
      path: /admission2
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJakNDQWdvQ0NRQ1JzV0x0bkg0eEREQU5CZ2txaGtpRzl3MEJBUXNGQURCVE1Rc3dDUVlEVlFRR0V3SkQKVGpFTE1Ba0dBMVVFQ0F3Q1IwUXhDekFKQmdOVkJBY01BbE5hTVJNd0VRWURWUVFLREFwQlkyMWxMQ0JKYm1NdQpNUlV3RXdZRFZRUUREQXhCWTIxbElGSnZiM1FnUTBFd0hoY05NakV3T0RFMU1UVXdOalUyV2hjTk1qSXdPREUxCk1UVXdOalUyV2pCVE1Rc3dDUVlEVlFRR0V3SkRUakVMTUFrR0ExVUVDQXdDUjBReEN6QUpCZ05WQkFjTUFsTmEKTVJNd0VRWURWUVFLREFwQlkyMWxMQ0JKYm1NdU1SVXdFd1lEVlFRRERBeEJZMjFsSUZKdmIzUWdRMEV3Z2dFaQpNQTBHQ1NxR1NJY [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 15
  failurePolicy: Ignore
